// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QueryPerson /> component Renders data correctly 1`] = `
<Text>
  [{"id":"54f58dfd-3f17-427c-b1d1-74c26a77f700","name":"Key Whitley","job_title":"Michael Jackson Impersonator","is_active":true,"avatar_uri":"https://randomuser.me/api/portraits/women/45.jpg","company":{"name":"DIGINETIC"},"department":"Information Technology","email":"keywhitley@diginetic.com","phone":"+1 (968) 469-2764","location":{"coordinates":[-78.5011,-35.033]}}]
</Text>
`;

exports[`<QueryPerson /> component Renders loading correctly 1`] = `
<Text>
  Loading
</Text>
`;
